--- a/web/reports/diagnostics.jrxml
+++ b/web/reports/diagnostics.jrxml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="diagnostics" language="groovy" pageWidth="110" pageHeight="802" columnWidth="110" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
+<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="diagnostics" pageWidth="110" pageHeight="802" columnWidth="110" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="e00ef04e-1059-4845-9c9e-922f64131f0f">
 	<property name="ireport.callouts" value="##Wed May 23 13:27:27 PKT 2018"/>
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<style name="style1" isDefault="false" mode="Opaque" backcolor="#F4F5F5">
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
+	<style name="style1" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 ==0]]></conditionExpression>
-			<style isDefault="false" style="style1" backcolor="#D4DED9"/>
+			<style backcolor="#D4DED9"/>
 		</conditionalStyle>
 	</style>
 	<parameter name="prescription_id" class="java.math.BigDecimal"/>
 	<queryString>
-		<![CDATA[SELECT * FROM TABLE(GET_DIAGNOSTICS($P{prescription_id}))
-]]>
+		<![CDATA[SELECT * FROM TABLE(GET_DIAGNOSTICS($P{prescription_id}))]]>
 	</queryString>
 	<field name="TITLE" class="java.lang.String"/>
 	<field name="FIELD_VAL" class="java.lang.String"/>
@@ -24,13 +25,13 @@
 		<band height="15" splitType="Stretch">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 10]]></printWhenExpression>
 			<rectangle>
-				<reportElement x="0" y="0" width="109" height="15" backcolor="#CCCCCC"/>
+				<reportElement x="0" y="0" width="109" height="15" backcolor="#CCCCCC" uuid="fe820f5c-6bef-4b82-a79d-ce28a4d497e0"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineStyle="Dashed" lineColor="#666666"/>
 				</graphicElement>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="0" width="109" height="13"/>
+				<reportElement x="0" y="0" width="109" height="13" uuid="77e89b8b-f0af-4f73-b8c8-d99daeb98c28"/>
 				<box leftPadding="5"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10" isBold="true" isItalic="false"/>
@@ -48,19 +49,19 @@
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement x="0" y="0" width="76" height="18"/>
+				<reportElement x="0" y="0" width="76" height="18" uuid="08c42056-91ae-465e-9190-274cf44d938f"/>
 				<box leftPadding="3"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{TITLE}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{TITLE}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="76" y="0" width="33" height="18"/>
+				<reportElement x="76" y="0" width="33" height="18" uuid="a3bec448-a8fa-494b-84ec-731e9b2b817a"/>
 				<box leftPadding="3"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{FIELD_VAL}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{FIELD_VAL}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="1" y="19" width="108" height="1"/>
+				<reportElement positionType="FixRelativeToBottom" x="1" y="19" width="108" height="1" uuid="0a5b04c5-db3f-42f3-8c30-bd66c3d89715"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineStyle="Dashed" lineColor="#333333"/>
 				</graphicElement>
