--- a/web/reports/medicine.jrxml
+++ b/web/reports/medicine.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="medicine" pageWidth="430" pageHeight="802" columnWidth="430" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="0259104d-2194-4003-84d6-aa522063ea1d">
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="medicine" pageWidth="430" pageHeight="802" whenNoDataType="AllSectionsNoDetail" columnWidth="430" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="0259104d-2194-4003-84d6-aa522063ea1d">
 	<property name="ireport.callouts" value="##Wed May 23 13:27:27 PKT 2018"/>
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
@@ -13,6 +13,9 @@
 		</conditionalStyle>
 	</style>
 	<parameter name="prescription_id" class="java.math.BigDecimal"/>
+	<parameter name="remarks" class="java.lang.String" isForPrompting="false">
+		<parameterDescription><![CDATA[Doctor Remarks]]></parameterDescription>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT '1' GROUP_ID, TM.PRODUCT_NME MEDICINE_NME,
  TPD.QTY,TPD.DAYS,TDU.TITLE DOSE_USAGE,TDU.TITLE_URDU,INITCAP(TF.TITLE) FREQUENCY,
@@ -123,7 +126,7 @@ LAB.LAB_NME, NULL PRESC_DTE,NULL DOSE_QTY
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="30"/>
+			<band height="20"/>
 		</groupFooter>
 	</group>
 	<background>
@@ -204,6 +207,18 @@ LAB.LAB_NME, NULL PRESC_DTE,NULL DOSE_QTY
 		<band splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band splitType="Stretch"/>
+		<band height="30" splitType="Stretch">
+			<staticText>
+				<reportElement x="0" y="0" width="70" height="15" uuid="b11be747-0ee2-4aac-aa92-df35d03a1916"/>
+				<textElement>
+					<font fontName="SansSerif" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Remarks:]]></text>
+			</staticText>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement x="70" y="0" width="360" height="15" uuid="1a7ef301-9525-45c2-91ac-eebfd91aec21"/>
+				<textFieldExpression><![CDATA[$P{remarks}]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
