--- a/web/reports/prescription.jrxml
+++ b/web/reports/prescription.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="prescription" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1adaa690-ad3c-4a48-a65c-48eb47d65eb4">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
@@ -37,6 +37,9 @@
 					<reportElement x="138" y="0" width="417" height="37" uuid="68674839-a011-44dd-becc-48d701655a51"/>
 					<subreportParameter name="prescription_id">
 						<subreportParameterExpression><![CDATA[$F{TW_PRESCRIPTION_MASTER_ID}]]></subreportParameterExpression>
+					</subreportParameter>
+					<subreportParameter name="remarks">
+						<subreportParameterExpression><![CDATA[$F{REMARKS}]]></subreportParameterExpression>
 					</subreportParameter>
 					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "medicine.jasper"]]></subreportExpression>
@@ -169,7 +172,7 @@
 	<pageFooter>
 		<band height="82" splitType="Stretch">
 			<image scaleImage="FillFrame" hAlign="Center" onErrorType="Blank">
-				<reportElement x="0" y="0" width="555" height="82" uuid="b2237a65-699c-46a1-aaeb-9a4fd7c9dc15"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="0" width="555" height="80" uuid="b2237a65-699c-46a1-aaeb-9a4fd7c9dc15"/>
 				<imageExpression><![CDATA[$P{footerImage}]]></imageExpression>
 			</image>
 		</band>
